# ultimate_rust_crash_course

exercise/a_variables/: ANSWERS.md
exercise/a_variables/variables/src/: main.rs
exercise/b_functions/: Cargo.toml
exercise/b_functions/src/: main.rs
exercise/c_simple_types/src/: lib.rs  main.rs
exercise/d_control_flow_strings/src/: main.rs
exercise/e_ownership_references/src/: main.rs
exercise/f_structs_traits/src/: main.rs
exercise/g_collections_enums/src/: main.rs
exercise/hello/: Cargo.toml
exercise/hello/src/: lib.rs  main.rs
