[package]
name = "hello"
version = "0.1.0"
authors = ["Danny Bui <dannybui5155@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6.5" #imports random generator to be used in lib or binary (main) 
#can be used absolute or brining in specific item into scope